<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_marginTop="73dp"
        android:width="250dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:width="250dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conntectedButton"
        android:id="@+id/btnConnect"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/password"
        android:layout_alignEnd="@+id/password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConnected"
        android:id="@+id/connectedMessage"
        android:textSize="20sp"
        android:layout_below="@+id/progressBar"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@+id/progressBar"
        android:layout_alignEnd="@+id/progressBar" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/btnConnect"
        android:layout_alignEnd="@+id/btnConnect"
        android:layout_alignStart="@+id/btnConnect"
        android:layout_marginTop="30dp" />

</RelativeLayout>
